work section overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -361,6 +361,11 @@ html,body{
     }
 }
 @media only screen and (max-width:650px){
+    .projects{
+        height: 145vh;
+        align-content: space-between;
+        padding-top: 10vh;
+    }
     .home .name{
         font-size: 6rem
     }
@@ -368,12 +373,11 @@ html,body{
         grid-template-rows: repeat(4,1fr);
         grid-template-columns: repeat(2, 1fr);
     }
+    .skillset .section-title, .projects .section-title{
+        font-size: 5rem;
+    }
     .mobile-container{
         width: 45vw;
-    }
-
-    .projects{
-        height: 200vh;
     }
     .grid-container{
         width: 40rem;
@@ -381,17 +385,14 @@ html,body{
         grid-template-rows: repeat(5, 1fr);
         grid-template-columns: repeat(2, 1fr);
     }
-
     .proj2{
         grid-column: 1/3;
         grid-row: 3/5;
     }
-
     .proj3{
         grid-column: 1/3;
         grid-row: 5/6;
     }
-
     .proj5{
         grid-column: 1/3;
         grid-row: 6/7;
